Closed Bug 1448760 Opened 7 years ago Closed 7 years ago

Browser/web console do not remember window maximised state on Windows

Categories

(Firefox :: Untriaged, defect)

61 Branch
Unspecified
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 61
Tracking Status
firefox-esr52 --- unaffected
firefox59 --- unaffected
firefox60 --- unaffected
firefox61 --- fixed

People

(Reporter: eros_uk, Assigned: xidorn)

References

Details

(Keywords: reproducible)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:61.0) Gecko/20100101 Firefox/61.0 Build ID: 20180324100127 Steps to reproduce: Internal windows (history, Dev, console, etc) in 61.0a1 (2018-03-24) (64-bit) open up ALWAYS small and do no remember the maximised state. This issue was not present before (60.0a1) and is new in 61.0a1 (2018-03-24) (64-bit) .
Depends on: 1446264
Not fixed yet on 61.0a1 (2018-03-26) (64-bit)
I can reproduce on Browser console
Status: UNCONFIRMED → NEW
Ever confirmed: true
I tested 20180326220108 which is supposed to include fix of bug 1446264, and the original bug 1446264 is indeed fixed for the browser window. However, it seems that web console and browser console somehow still don't remember the maximized state on Windows (while it works as expected on macOS).
Re-purpose it to the browser console and web console. Note that I cannot reproduce this issue on library (bookmarks and history) window. That should have been fixed in bug 1446264.
Summary: Nightly: 61.0a1 (2018-03-24) (64-bit) Does not remember internal window maximised state → Browser/web console do not remember window maximised state on Windows
Blocks: 1439875
I cannot reproduce this issue with 20180316100132 (which is the last nightly without bug 1439875) so supposedly this is also by that bug.
As of 61.0a1 (2018-03-26) (64-bit) Win, History, Bookmarks are fine. Browser console (Ctrl + shift + J & F12) are still affected.
Scratchpad is also affected,
Keywords: reproducible
OS: Unspecified → Windows
Assignee: nobody → xidorn+moz
So the problem here is that, the window has "centerscreen" feature set, and thus we try to centering it after chrome loads, which pulls the window back from maximized state. I guess there isn't really an approach we can exactly restore the old behavior (that the window is centered then maximized, which means when restore from the maximized state, the window would be center in the screen rather than restore the previous persisted position), but I guess skip centering the window in that case probably makes enough sense.
Comment on attachment 8962697 [details] Bug 1448760 - Don't try to center window after load when the size mode is not normal. https://reviewboard.mozilla.org/r/231568/#review237384
Attachment #8962697 - Flags: review?(bzbarsky) → review+
Pushed by xquan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f2079554d753 Don't try to center window after load when the size mode is not normal. r=bz
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 61
Maximize issue appears fixed on 61.0a1 (2018-03-29) (64-bit) Win New in 61.0a1 (2018-03-29) (64-bit) Win Although ............. I don't seem to be able to clear the Browser console. I delete (Bin), it clears. After closing and reopening the console (Ctrl + Shift + J) the entries are still there. errors from: view-source:resource://devtools/client/inspector/markup/markup.js etc etc
For anything different, please file new bug.
Filed under a new bug 1450186 The reason I mentioned it here was just in case, it had anything to do with the fix that was introduced in this bug.
Not sure if it is related or not.. seems related... Debug: Developer Tools The maximize is grey and can not resize the window manually Also on lunch of extension debug.. the screens goes black first and then it shows. It seems like a black full size window is opened, then resized and content shown.
Update: I was testing with 61.0a1 (2018-04-08) (64-bit) Win comment 16 maximize issue is also fixed in the Debug: Developer Tools Console Tested on 61.0a1 (2018-04-13) (64-bit) Win The black screen flash is still there though.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: