Bug 1448760 - Don't try to center window after load when the size mode is not normal. r=bz

MozReview-Commit-ID: Ainh34XuvFg

--HG--
extra : rebase_source : 034caa4085d7fd3836d3f3bf5fb3c7390dc785a7